[gd_scene load_steps=5 format=3 uid="uid://cv0mbpforokqi"]

[ext_resource type="Script" uid="uid://jdu4ul4n4jhj" path="res://gameplay_components/angle_tanks/tank_enemy.gd" id="1_llq4b"]
[ext_resource type="Texture2D" uid="uid://cmj00nwi37xma" path="res://art/top_down_tanks/tankBody_red_outline.png" id="2_llq4b"]
[ext_resource type="Texture2D" uid="uid://dnvwvmoeseqa2" path="res://art/top_down_tanks/tankRed_barrel2_outline.png" id="3_b0m88"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6wdga"]
radius = 18.6052

[node name="EnemyTank" type="CharacterBody2D" groups=["tanks"]]
rotation = 1.5708
scale = Vector2(1.3, 1.3)
collision_mask = 4
script = ExtResource("1_llq4b")

[node name="Tank" type="Sprite2D" parent="."]
texture = ExtResource("2_llq4b")

[node name="Pivot" type="Node2D" parent="."]

[node name="Barrel" type="Sprite2D" parent="Pivot"]
unique_name_in_owner = true
position = Vector2(0, -18)
texture = ExtResource("3_b0m88")

[node name="BulletSpawnPoint" type="Marker2D" parent="Pivot"]
unique_name_in_owner = true
position = Vector2(-1.54671e-06, -35.3846)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["tanks"]]
shape = SubResource("CircleShape2D_6wdga")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
